| Summary: | ASTERISK-26399: app_queue: Agent not called when caller is parked | ||
| Reporter: | wushumasters (wushumasters) | Labels: | |
| Date Opened: | 2016-09-22 13:18:57 | Date Closed: | 2017-05-24 07:50:31 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Applications/app_queue Resources/res_parking |
| Versions: | 13.11.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Asterisk 13.11.2 Debian 8 64bits | Attachments: | ( 0) asterisk_log_26399 ( 1) extensions.conf ( 2) log.txt ( 3) queues.conf |
| Description: | Hello,
I dont know if this is a bug but, When i park a call from queue i cant receive others calls because queue show me the peer is "in call" features.conf parkcall => *7 This is the commands when i parked the call pabx*CLI> queue show QUEUE QUEUE has 0 calls (max unlimited) in 'linear' strategy (2s holdtime, 60s talktime), W:1, C:18, A:1, SL:100.0% within 90s Members: SIP/7403 (Local/7403@queue-dial from SIP/7403) (ringinuse disabled) (in call) (In use) has taken 16 calls (last was 1313 secs ago) No Callers -- Channel SIP/7400-000004fd left 'simple_bridge' basic-bridge <ab84343f-6a2d-48cf-88ec-3fe1da83990b> -- Parking 'SIP/7400-000004fd' in 'default' at space 701 -- Channel SIP/7400-000004fd joined 'holding_bridge' parking-bridge <c0b7fa93-4b59-44d2-a60c-1aa5d9176c23> -- Started music on hold, class 'nova-espera-if', on channel 'SIP/7400-000004fd' -- <SIP/7403-000004fe> Playing 'digits/7.slin' (language 'pt_BR') -- <SIP/7403-000004fe> Playing 'digits/0.slin' (language 'pt_BR') -- <SIP/7403-000004fe> Playing 'digits/1.slin' (language 'pt_BR') -- Channel SIP/7403-000004fe left 'simple_bridge' basic-bridge <ab84343f-6a2d-48cf-88ec-3fe1da83990b> pabx*CLI> queue show QUEUE QUEUE has 0 calls (max unlimited) in 'linear' strategy (2s holdtime, 60s talktime), W:1, C:18, A:1, SL:100.0% within 90s Members: SIP/7403 (Local/7403@queue-dial from SIP/7403) (ringinuse disabled) (in call) (Not in use) has taken 16 calls (last was 1326 secs ago) No Callers pabx*CLI> core show channels Channel Location State Application(Data) SIP/7400-00000 *501@padrao:42 Up Queue(QUEUE,tk,,,360 Local/7403@queue-dia *501@queue-dial:1 Up AppQueue((Outgoing Line)) Sorry my english Thanks | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-09-22 13:18:57.850-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-09-23 07:59:17.273-0500 Thank you for taking the time to report this bug and helping to make Asterisk better. Unfortunately, we cannot work on this bug because your description did not include enough information. Please read over the Asterisk Issue Guidelines [1] which discusses the information necessary for your issue to be resolved and the format that information needs to be in. We would be grateful if you would then provide a more complete description of the problem. At a minimum, we need: 1. The specific steps or actions you took that caused you to encounter the problem. 2. The behavior you expected and the location of documentation that led you to that expectation. 3. The behavior you actually encountered. To demonstrate the issue in detail, please include Asterisk log files generated per the instructions on the wiki [2]. If applicable, please ensure that protocol-level trace debugging is enabled, e.g., 'sip set debug on' if the issue involves chan_sip, and configuration information such as dialplan and channel configuration. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines [2] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: wushumasters (wushumasters) 2016-09-23 08:12:17.213-0500 Joshua, Sorry my english: I try to explain: I call to the queue (with k option on application Queue), the peer answered the call and parked (with the code *7, this code is in features.conf). My call go to the parking but the queue show the peer is "in call" when i type "queue show QUEUE" By: Joshua C. Colp (jcolp) 2016-09-23 08:16:02.370-0500 We also need to see the complete Asterisk log and the queue configuration. By: wushumasters (wushumasters) 2016-09-29 07:27:53.144-0500 I did more tests and using transfer with *2 to the default code 700 the problem also happened Thanks By: Sidney Gluckman (sidgluckman) 2016-12-29 15:15:52.918-0600 Asterisk log of the problem described in this bug. Call was delivered to queue 100 and subsequently delivered to member 3012. Call was parked using AMI command Park but problem also happens using dialplan application ParkCall. After parking the call, which succeeds, a "queue show" from the CLI shows agent 3012 as still "in call". It remains in that state until the call is hung up, preventing other calls from being delivered. By: Sidney Gluckman (sidgluckman) 2016-12-29 15:17:15.416-0600 Note: The problem does NOT occur if I park the call from the SIP phone using a SIP transfer to the park extension. By: Sidney Gluckman (sidgluckman) 2016-12-29 16:05:14.247-0600 After looking at the app_queue code it appears that this behavior may have been intentional, perhaps someone can leave a comment as to why. I'm going to modify the code to get rid of this behavior for my application, I don't mind submitting the change if there isn't a reason it was left out. By: wushumasters (wushumasters) 2017-02-27 09:59:53.724-0600 The same is happen when pickup a call from queue By: David Brillert (aragon) 2017-02-27 10:05:41.680-0600 Probably related to ASTERISK-26400 By: Friendly Automation (friendly-automation) 2017-05-24 07:50:32.666-0500 Change 5640 merged by Jenkins2: app_queue: Fix members showing as being in call when not. [https://gerrit.asterisk.org/5640|https://gerrit.asterisk.org/5640] By: Friendly Automation (friendly-automation) 2017-05-24 08:40:12.570-0500 Change 5639 merged by Jenkins2: app_queue: Fix members showing as being in call when not. [https://gerrit.asterisk.org/5639|https://gerrit.asterisk.org/5639] By: Friendly Automation (friendly-automation) 2017-05-24 09:41:39.905-0500 Change 5641 merged by Joshua Colp: app_queue: Fix members showing as being in call when not. [https://gerrit.asterisk.org/5641|https://gerrit.asterisk.org/5641] | ||